# ceo-agent-demo

./: .gitignore  .vercelignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  pyproject.toml  vercel.json
api/: dingtalk-feedback-spike-events.js  dingtalk-feedback-spike.js  feedback-storage.js
app/: __init__.py  agent_envelope.py  audit_web.py  cli.py  codex_decision.py  codex_history.py  codex_runner.py  config.py  corpus.py  developer_prompt.py  dingtalk_models.py  dws_client.py  external_retry.py  feedback_events.py  feedback_policy.py  feedback_spike.py  follow_up.py  leak_check.py  memory_setup.py  message_split.py  notification.py  oa_approval.py  okr_models.py  okr_review.py  org_cache.py  permission.py  process_runner.py  prompt.py  registry.py  setup_wizard.py  setup_wizard_models.py  store.py  structured_agent.py  task_agent.py  task_memory_backfill.py  task_models.py  task_retrieval.py  task_scanners.py  user_prompt_blocks.py  work_profile.py  (+1 more)
data/: README.md
docs/: agent-installation-runbook.md  codex-session-history.md  dws-capabilities.md  dws-command-inventory.md  message-response-window.md  message-routing-rules.md  nvwa-work-profile-installation.md  product-logic.md  reply-worker-reliability.md  work-profile-distillation-tutorial.md
launchd/: com.ceo-agent-service.main.plist
scripts/: backfill_follow_up_todo_ids.py  check-dws-auth-env.sh  dingteam_okr_live_source.py  install-auto-reply-agents.sh  launchctl-service-control.sh  run-local-service.sh
(+64 files in other folders)
